# clintest

./: .gitignore  .pylintrc  LICENSE  README.md  chart_flow  clorm_test.py  example.lp  pyproject.toml  run.py  runtest.py  setup.cfg  setup.py
.github/workflows/: checks.yml  ci.yml  doc.yml
clintest/: README.md  __init__.py  __main__.py  assertion.py  assessment.py  check.py  clintest.py  clintestapp.py  evaluator.py  model.py  modelregister.py  outcome.py  parser.py  quantifier.py  runner.py  solver.py  test.py  testcaller.py  testfunction.py  utils.py  worker.py
clintest/testcaller/: __init__.py
example/: simpleTest.lp
example/constexample/: README.md  encoding.lp  test_encoding.json
example/pathfinding/: README.md  optimization.lp  pathfinding.lp  satisfiability.json  test_instance01.json  test_instance02.json  testing_instances.json
example/pathfinding/instances/: instance01.lp
example/simpleexample/: color.lp  number.json  test_on_color.json  testcostmodel.lp
example_configuration/: test.json  test.lp
example_test_json/: color.lp  number.json  number.lp  test.json  test.lp  test_on_color.json
examples/: my_classes.py  test.json
examples/color/: color.lp  tests.json
examples/pathfinding/: encoding.lp  tests.json
homework/task1/: cost.lp  todo.txt
homework/task2/: encoding.lp  todo.txt
homework/task2/instance/: instance02.lp
homework/task3/: todo.txt
src/clintest/: __init__.py  __main__.py  assertion.py  model.py  outcome.py  protocol.py  quantifier.py  solver.py  test.py
tests/: .ruff.toml  test_assertion.py  test_basics.py  test_model.py  test_outcome.py  test_protocol.py  test_quantifier.py  test_solver.py  test_test.py
utils/: __init__.py  __init__old.py  clintest.py  clintestHelperFunctions.py  model_register.py  parser.py
