[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "clintest"
version = "0.5.0"
authors = [
    {name = "Tobias Stolzmann", email = "tobias.stolzmann@uni-potsdam.de"},
]
description = "A test framework for clingo programs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "clingo>=5.5.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1",
    "pytest>=8",
    "ruff>=0.15",
]
doc = [
    "pdoc3>=0.11",
]

[project.urls]
Documentation = "https://potassco.org/clintest/"
Repository = "https://github.com/potassco/clintest"
Issues = "https://github.com/potassco/clintest/issues"
Changelog = "https://github.com/potassco/clintest/releases"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "PL",   # pylint
    "B",    # bugbear
    "S",    # bandit
    "E",    # pycodestyle: errors
    "W",    # pycodestyle: warnings
    "D",    # pydocstyle
    "I",    # isort
]
ignore = [
    # TODO: Remove these ignores once the issues are resolved
    "PLW1641",
    "PLW2901",
    "B008",
    "B027",
    "B905",
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
