[metadata]
name = clintest
version = 0.4.0
author = Tobias Stolzmann
author_email = tobias.stolzmann@uni-potsdam.de
description = A test framework for clingo programs
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/potassco/clintest

[options]
packages = clintest
install_requires =
    clingo>=5.5.0
